
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int value_str ;
typedef int uint8_t ;


 int assert (int ) ;
 int btc_key_value_to_string (int *,char*,int) ;
 int config ;
 int config_has_key_in_section (int ,char const*,char*) ;
 int config_remove_section (int ,char const*) ;

bool btc_compare_address_key_value(const char *section, const char *key_type, void *key_value, int key_length)
{
    assert(key_value != ((void*)0));
    bool status = 0;
    char value_str[100] = {0};
    if(key_length > sizeof(value_str)/2) {
        return 0;
    }
    btc_key_value_to_string((uint8_t *)key_value, value_str, key_length);
    if ((status = config_has_key_in_section(config, key_type, value_str)) == 1) {
        config_remove_section(config, section);
    }
    return status;
}
